--- a/BootLay3.html
+++ b/BootLay3.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta description="technology solutions, technology, technical solutions, software solutions">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Header Section-->
@@ -59,53 +59,42 @@
                 </div>   
             </div>
         </section>
-    <section id="contact" class ="mt-6">
-        <h4 class="my-3">Contact Info</h4>
-        <form>
-            <div class="mb-4">
-                <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Enter your name">
-            </div>
-            <div class="mb-4">
-                <label for="email">Email</label>
-                <input type="email" id="email" placeholder="Enter your email">
-            </div>
-            <div class="mb-4">
-                <label for="message">Message</label>
-                <textarea id="message" id="message" rows="4" placeholder="Message"></textarea>
-            </div>
-            <button type="submit">Send</button>
-        </form>
-        <aside id="sidebar">
-            <div class="container my-6 py-3">
-                <title>About Technology Solutions</title>    
-            </div><aside id="sidebar">
-                <div class="container my-6 py-3">
-                    <title>About Technology Solutions</title>    
+    <footer>
+        <div class="containers">
+            <div class="row">
+                <div class="col-sm=12 col-md-4 mt-6">
+                    <h4 class="my-3">Contact Info</h4>
+                    <form>
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" id="name" placeholder="Enter your name">
+                        </div>
+                        <div class="mb-4">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" placeholder="Enter your email">
+                        </div>
+                        <div class="mb-4">
+                            <label for="message">Message</label>
+                            <textarea id="message" id="message" rows="4" placeholder="Message"></textarea>
+                        </div>
+                        <button type="submit">Send</button>
+                    </form> 
                 </div>
-                <div class="container mb-6 pb-3">
-                    <p>Technology Solutions was founded in 2022,
-                        with the purpose of bringing technology to
-                        the world.  We have multiple ways of making
-                        our world better through the technological
-                        advances we have made over the decades.  We 
-                        should help each other as much as we can.
-    
+                <div class="col-sm=12 col-md-4 mt-6">
+                    <h3>Email Contact for Technology Solutions</h3>
+                    <p>
+                        <a href="mailto:Techsolutions@yahoo.com">Techsolutions@yahoo.com</a>
                     </p>
                 </div>
-            </aside>
-            <div class="container mb-6 pb-3">
-                <p>Technology Solutions was founded in 2022,
-                    with the purpose of bringing technology to
-                    the world.  We have multiple ways of making
-                    our world better through the technological
-                    advances we have made over the decades.  We 
-                    should help each other as much as we can.
-
-                </p>
+                <div class="col-sm=12 col-md-4 mt-6">
+                    <h3>Online Notification Signup</h3>
+                    <p>Enter your email to sign up for our online newsletter</p>
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter your email">
+                    </p>
+                </div>
             </div>
-        </aside>
-    </section>
-    </div>
-        
+        </div>    
+    </footer>
 </body>
+</html>
