--- a/bootlay1.html
+++ b/bootlay1.html
@@ -14,7 +14,7 @@
      <header class="container">
         <div class="row">
             <div class="col">
-            <img width="100%" height="200" src="techimg.jpg" alt="tech pic">
+            <img src="techimg.jpg" alt="tech pic">
             </div>
             <div class="col">
                 <p>
